<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Jobtick</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="current_location">Your suburb</string>
    <string name="selected_suburb">Selected suburb</string>
    <string name="processing">Processing ..</string>
    <string name="please_wait">Please wait ..</string>
    <string name="retry">Retry</string>
    <string name="title_network_error">Network Not Detected !</string>
    <string name="msg_network_error">Please check your Internet connection</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="facebook_app_id">1147513929013619</string>
    <string name="fb_login_protocol_scheme">fb1147513929013619</string>
    <string name="task_title">Task Title</string>
    <string name="describe_your_task">Describe Your Task</string>
    <string name="task_location">Task Location</string>
    <string name="due_date">Due Date</string>
    <string name="you_are_not_authorize">You are not authorize.</string>
    <string name="clientId">582071119574-lfgbfr35iaug3sgb418uiplbr86rp5ls.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log in</string>
    <string name="google">GOOGLE</string>
    <string name="sign_up">Sign up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="resend_code">Resend Code</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dashboard">Dashboard</string>
    <string name="payment">Payment</string>
    <string name="saved_tasks">Saved Tasks</string>
    <string name="successfully_saved">Successfully saved!</string>
    <string name="notifications">Notifications</string>
    <string name="task_alerts">Task Alerts</string>
    <string name="refer_a_friend">Refer A Friend</string>
    <string name="settings">Settings</string>
    <string name="help_topics">Help Topics</string>
    <string name="logout">Logout</string>
    <string name="title_new_task">Home</string>
    <string name="post_a_job">Post a Job</string>
    <string name="title_my_jobs">My Jobs</string>
    <string name="title_explore">Explore\n</string>
    <string name="title_chat">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="title_workspace">Workspace</string>
    <string name="title_messaging">Messaging</string>
    <string name="title_inventory">Inventory</string>
    <string name="search_categories">Search categories</string>
    <string name="Details">details</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="budget">Budget</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="details">Details</string>
    <string name="gallery">Gallery</string>
    <string name="msg_image_select">Image Not Select</string>
    <string name="error_image_select">Error selecting image</string>
    <string name="action_logout">Logout</string>
    <string name="action_share">Share</string>
    <string name="action_rate_us">Rate Us</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="attachment">Attachments</string>
    <string name="back">Back</string>
    <string name="post_task">post the job</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="submit">Submit</string>
    <string name="edit_bank_account">Edit Bank Account</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="bank_account">Bank Account</string>
    <string name="completed_profile">Completed Profile</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="change_billing_address">Change Billing Address</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="msg_video_record">Video recording cancelled.</string>
    <string name="error_video_record">Failed to record video.</string>
    <string name="no_call_feature">No Call Feature</string>
    <string name="MAPBOX_ACCESSS_TOKEN">pk.eyJ1Ijoiam9idGljayIsImEiOiJja2pzMWYycWEza3RwMnpxb3BzYm1rZ3plIn0.q7vS4z3Ffxuyy0QwnOX8BA</string>
    <string name="remotely">Remotely</string>
    <string name="in_person">In person</string>
    <string name="all">All</string>
    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
    <string name="medium_lorem_ipsum">Quisque imperdiet nunc at massa dictum volutpat. Etiam id orci ipsum. Integer id ex dignissim</string>
    <string name="long_lorem_ipsum">
        Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod. Praesent sem nisl, facilisis eget odio at, rhoncus scelerisque ipsum. Nulla orci dui, dignissim a risus ut, lobortis porttitor velit.
        \n\nNulla id lectus metus. Maecenas a lorem in odio auctor facilisis non vitae nunc. Sed malesuada volutpat massa. Praesent sit amet lacinia augue, mollis tempor dolor.
    </string>
    <string name="share">Share</string>
    <string name="menu_bookmark">Bookmar</string>
    <string name="menu">menu</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="report">Report</string>
    <string name="action_flag">Flag</string>
    <string name="camera">Camera</string>
    <string name="Cancellation">Cancellation</string>
    <string name="Reschedule">Reschedule</string>
    <string name="increase_budget">Increase Price</string>
    <string name="about_me">About me</string>
    <string name="todo">TODO</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="provide_your_mobile_number">Provide your mobile number</string>
    <string name="mobile_number">mobile number</string>
    <string name="enter_verification_code_sent">Enter verification code sent</string>
    <string name="sms_verification_code">SMS verification code</string>
    <string name="_5_star_website_and_graphic_designer">“5 Star website and graphic designer”</string>
    <string name="no_portfolio_added_yet">No portfolio added yet</string>
    <string name="increase_your_chance_to_get_a_job_by">Increase your chance to get a job by</string>
    <string name="adding_portf">adding your portfolio</string>
    <string name="login_to_jobtick">Login to Jobtick</string>
    <string name="by_joining_you_agree_to_jobtick_s_terms_of_services">By joining, you agree to Jobtick’s Terms of Services.</string>
    <string name="set_your_password">Set your Password</string>
</resources>