<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            app:actionLayout="@layout/menu_badge_navigation"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_saved_tasks"
            android:icon="@drawable/ic_saved_task"
            android:title="@string/saved_tasks" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/notifications" />

        <item
            android:id="@+id/nav_task_alerts"
            android:icon="@drawable/ic_alert"
            android:title="@string/task_alerts" />
        <item
            android:id="@+id/nav_refer_a_friend"
            android:icon="@drawable/ic_refrer_frnd"
            android:title="@string/refer_a_friend" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_help_topics"
            android:icon="@drawable/ic_help"
            android:title="@string/help_topics" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_log_out"
            android:title="@string/logout" />
    </group>

</menu>
