<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_flag"
        android:icon="@drawable/ic_flag"
        android:title="@string/action_flag"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_three_dot"
        android:icon="@drawable/ic_three_dot"
        android:title="@string/menu"
        app:showAsAction="ifRoom">
        <menu>
            <group

                android:id="@+id/grp_1">
                <item
                    android:id="@+id/action_edit"
                    android:icon="@drawable/ic_menu_edit"
                    android:title="@string/edit"
                    app:showAsAction="withText" />
            </group>
        </menu>
    </item>


</menu>