<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/grp_1">
        <item
            android:id="@+id/action_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera"
            app:showAsAction="withText" />
    </group>
    <group android:id="@+id/grp_2">
        <item
            android:id="@+id/action_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery"
            app:showAsAction="withText" />
    </group>
    <group android:id="@+id/grp_3">
        <item
            android:id="@+id/action_remove"
            android:icon="@drawable/ic_menu_delete"
            android:title="@string/remove"
            app:showAsAction="withText" />
    </group>


</menu>