<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".material.ui.landing.SignInFragment">

    <com.google.android.material.textview.MaterialTextView
        style="@style/heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/set_your_password"
        android:textColor="@color/neutral_dark"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/heading5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/login_to_jobtick"
        android:textColor="@color/neutral_light_800"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/outlineTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:minHeight="64dp"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password"
        style="@style/outlineTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:minHeight="64dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:minHeight="64dp"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:gravity="top"
        android:orientation="horizontal"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtBtn_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_middle"
            android:text="@string/by_joining_you_agree_to_jobtick_s_terms_of_services"
            android:textAppearance="@style/caption"
            android:textColor="@color/neutral_light_700" />


    </LinearLayout>
    <include
        layout="@layout/error_view"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />

</LinearLayout>