<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/phone_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.PhoneReqFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/spacing_mlarge"
                android:gravity="start"
                android:text="@string/provide_your_mobile_number"
                android:textAppearance="@style/materialText_400_15"
                android:textColor="@color/textColor" />

            <com.jobtick.widget.ExtendedEntryText
                android:id="@+id/edt_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium"
                app:eHint="0* **** ****"
                app:eMaxCharNumber="10"
                app:eBoxSize="small"
                app:eInputType="verify"
                app:eTitle="@string/mobile_number" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@style/materialText_400_15"
                android:layout_marginStart="@dimen/spacing_mlarge"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:layout_marginEnd="@dimen/spacing_mlarge"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="start"
                android:text="@string/enter_verification_code_sent"
                android:textColor="@color/textColor" />

            <com.jobtick.widget.ExtendedEntryText
                android:id="@+id/edt_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium"
                app:eBoxSize="small"
                app:eInputType="integer"
                app:eImeOptions="actionDone"
                app:eTitle="@string/sms_verification_code" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        style="@style/materialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form"
        android:layout_margin="15dp"
        android:enabled="false"
        android:text="@string/submit" />

</RelativeLayout>